--- a/style.css
+++ b/style.css
@@ -14,9 +14,13 @@
     /* flex-direction: row; */
     background-color: black;
     border: black;
-    align-self: stretch;
+    /* align-self: stretch; */
+    
 }
 
+.visor{
+    background-color: aliceblue;
+}
 .calculadora{
     background-color: aqua;
     width: 400px;
@@ -28,11 +32,17 @@
 }
 
 .botao{
-    /* width: 50px;
-    height: 50px; */
+    width: 50px;
+    height: 50px;
     background-color: antiquewhite;
     border: 1px, black;
     margin: 2px;
     /* align-content: stretch; */
     
+}
+
+.fila{
+    display: flex;
+    background-color: chartreuse;
+    justify-content: center;
 }
