--- a/style.css
+++ b/style.css
@@ -5,44 +5,115 @@
 
 .corpo{
     display: flex;
-    border: black;
-    background-color: brown;
+    border: 2px, black;
+    background-color: #a52a2a;
     justify-content: center;
-}
-
-.cabeca{
-    /* flex-direction: row; */
-    background-color: black;
-    border: black;
-    /* align-self: stretch; */
+    height: 100vh;
+    width: 100vw;
+    align-items: center;
     
 }
+/* /*  */
+.marca{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(218, 9, 9);
+    /* border: black; */
+    width: 300px;
+    height: 60px;
+    margin: 2px;
+    } 
 
-.visor{
-    background-color: aliceblue;
-}
+.visor{ 
+    /* display: flex; */
+    background-color: rgb(221, 15, 15);
+    margin: 2px;
+    /* flex-basis: 500px; */
+    /* flex-wrap: nowrap; */
+    width: 300px;
+    height: 60px;
+    }
 .calculadora{
-    background-color: aqua;
-    width: 400px;
-    height: 500px;
-    align-self: center;
-    /* margin: 220px; */
-    /* align-items: flex-end; */
+    display: flex;
+    flex-wrap: wrap;    
+    /* align-items: center; */
+    justify-content: space-around;
+    background-color: rgb(0, 0, 0);
+    width: 16vw;
+    height: 60vh;
+    /* border: 2px, black; */
+    /* gap: 5px; */
+    /* padding: 5px; */
+    /* margin: 2px; */
+    /* padding: 2px; */
+    /* justify-content: center; */
+    /* flex-direction: column; */
+    /* align-content: center; */
+    /* justify-content: space-evenly; */
+    padding: 15px;
+    /* align-self: flex-end; */
 
 }
 
 .botao{
-    width: 50px;
+    display: flex ;
+    padding: 1px;
+    /* justify-content: space-aro; */
     height: 50px;
+    width:  50px;
     background-color: antiquewhite;
-    border: 1px, black;
-    margin: 2px;
-    /* align-content: stretch; */
+    /* border: 1px, black; */
+    margin: 1px;
+
+
     
 }
 
-.fila{
+/* .fila{
+    display: flex;
+    width: 100%;
     display: flex;
     background-color: chartreuse;
-    justify-content: center;
+    justify-content: space-between;
+    border: 2%, black;
+} */
+
+.especial1{
+    
+    display: flex ;
+    padding: 1px;
+    /* justify-content: space-aro; */
+    height: 50px;
+    width:  50px;
+    background-color: antiquewhite;
+    /* border: 1px, black; */
+    margin: 1px;
+
+}
+
+.especial2{ 
+    display: flex ;
+    padding: 1px;
+    /* justify-content: space-aro; */
+    height: 50px;
+    width:  50px;
+    background-color: antiquewhite;
+    /* border: 1px, black; */
+    margin: 1px;
+
+}
+
+.especial3{
+    
+    display: flex ;
+    padding: 1px;
+    /* justify-content: space-aro; */
+    height: 50px;
+    width:  50px;
+    background-color: antiquewhite;
+    /* border: 1px, black; */
+    margin: 1px;
+
+
 }
