alterando pseudo selector

--- a/style.css
+++ b/style.css
@@ -10,110 +10,72 @@
     justify-content: center;
     height: 100vh;
     width: 100vw;
-    align-items: center;
-    
+    align-items: center;  
 }
-/* /*  */
 .marca{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
     background-color: rgb(218, 9, 9);
-    /* border: black; */
-    width: 300px;
+    width: 1000px;
     height: 60px;
-    margin: 2px;
+    /* margin: 2px; */
     } 
 
 .visor{ 
-    /* display: flex; */
     background-color: rgb(221, 15, 15);
     margin: 2px;
-    /* flex-basis: 500px; */
-    /* flex-wrap: nowrap; */
     width: 300px;
     height: 60px;
     }
 .calculadora{
     display: flex;
     flex-wrap: wrap;    
-    /* align-items: center; */
-    justify-content: space-around;
+    /* justify-content: space-evenly; */
     background-color: rgb(0, 0, 0);
     width: 16vw;
     height: 60vh;
-    /* border: 2px, black; */
-    /* gap: 5px; */
-    /* padding: 5px; */
-    /* margin: 2px; */
-    /* padding: 2px; */
-    /* justify-content: center; */
-    /* flex-direction: column; */
-    /* align-content: center; */
-    /* justify-content: space-evenly; */
     padding: 15px;
-    /* align-self: flex-end; */
-
+    margin: 5px;
 }
 
 .botao{
-    display: flex ;
-    padding: 1px;
-    /* justify-content: space-aro; */
     height: 50px;
     width:  50px;
     background-color: antiquewhite;
-    /* border: 1px, black; */
-    margin: 1px;
-
-
-    
+    margin: 3px;
+    padding: 1px;
 }
 
-/* .fila{
-    display: flex;
-    width: 100%;
-    display: flex;
-    background-color: chartreuse;
-    justify-content: space-between;
-    border: 2%, black;
-} */
 
 .especial1{
-    
-    display: flex ;
     padding: 1px;
-    /* justify-content: space-aro; */
+    /* flex-basis: 100px; */
     height: 50px;
-    width:  50px;
-    background-color: antiquewhite;
-    /* border: 1px, black; */
-    margin: 1px;
+    width:  108px;
+    background-color: rgb(226, 135, 16);
+    margin: 3px;
+    /* flex-grow: 1; */
+    /* align-self: start; */
 
 }
 
 .especial2{ 
-    display: flex ;
     padding: 1px;
-    /* justify-content: space-aro; */
+    margin: 3px;
     height: 50px;
     width:  50px;
-    background-color: antiquewhite;
-    /* border: 1px, black; */
-    margin: 1px;
-
+    background-color: rgb(207, 22, 124);
+    /* flex-grow: 1; */
+    /* flex-basis: 108px;  */
 }
 
 .especial3{
-    
-    display: flex ;
-    padding: 1px;
-    /* justify-content: space-aro; */
-    height: 50px;
+    /* padding: 1px; */
+    height: 108px;
     width:  50px;
-    background-color: antiquewhite;
-    /* border: 1px, black; */
-    margin: 1px;
-
-
+    background-color: rgb(73, 12, 241);
+    margin: 3px;
+    /* align-self: self-start; */
+    /* flex-grow: 1; */
 }
