--- a/style.css
+++ b/style.css
@@ -3,16 +3,16 @@
     padding: 0;
 }
 
-.corpo{
+    .calculadora div:nth-child(1){
     display: flex;
     border: 2px, black;
     background-color: #a52a2a;
     justify-content: center;
-    height: 100vh;
-    width: 100vw;
+    height: 60px;
+    width: 1000px;
     align-items: center;  
 }
-.marca{
+.calculadora div:nth-child(2){
     /* display: flex; */
     /* justify-content: center; */
     /* align-items: center; */
@@ -31,7 +31,7 @@
 .calculadora{
     display: flex;
     flex-wrap: wrap;    
-    /* justify-content: space-evenly; */
+    justify-content: space-evenly;
     background-color: rgb(0, 0, 0);
     width: 16vw;
     height: 60vh;
@@ -48,7 +48,7 @@
 }
 
 
-.especial1{
+.calculadora div:nth-child(18){
     padding: 1px;
     /* flex-basis: 100px; */
     height: 50px;
@@ -60,7 +60,7 @@
 
 }
 
-.especial2{ 
+.calculadora div:nth-child(19){ 
     padding: 1px;
     margin: 3px;
     height: 50px;
@@ -70,7 +70,7 @@
     /* flex-basis: 108px;  */
 }
 
-.especial3{
+.calculadora div:nth-child(20){
     /* padding: 1px; */
     height: 108px;
     width:  50px;
