--- a/style.css
+++ b/style.css
@@ -3,16 +3,16 @@
     padding: 0;
 }
 
-    .calculadora div:nth-child(1){
+.corpo{
     display: flex;
     border: 2px, black;
     background-color: #a52a2a;
     justify-content: center;
-    height: 60px;
-    width: 1000px;
+    height: 100vh;
+    width: 100vw;
     align-items: center;  
 }
-.calculadora div:nth-child(2){
+.calculadora div:nth-child(1){
     /* display: flex; */
     /* justify-content: center; */
     /* align-items: center; */
@@ -22,7 +22,7 @@
     /* margin: 2px; */
     } 
 
-.visor{ 
+.calculadora div:nth-child(2){ 
     background-color: rgb(221, 15, 15);
     margin: 2px;
     width: 300px;
@@ -31,12 +31,17 @@
 .calculadora{
     display: flex;
     flex-wrap: wrap;    
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     background-color: rgb(0, 0, 0);
     width: 16vw;
     height: 60vh;
     padding: 15px;
     margin: 5px;
+    /* align-content: stretch; */
+    
+    /* align-content: start; */
+    /* align-self: self-end; */
+    /* flex-direction: column; */
 }
 
 .botao{
@@ -45,6 +50,8 @@
     background-color: antiquewhite;
     margin: 3px;
     padding: 1px;
+    /* align-self: flex-start; */
+    /* align-items: center; */
 }
 
 
@@ -52,12 +59,11 @@
     padding: 1px;
     /* flex-basis: 100px; */
     height: 50px;
-    width:  108px;
+    width:  50px;
     background-color: rgb(226, 135, 16);
     margin: 3px;
     /* flex-grow: 1; */
-    /* align-self: start; */
-
+    /* align-self: stretch; */
 }
 
 .calculadora div:nth-child(19){ 
@@ -66,16 +72,21 @@
     height: 50px;
     width:  50px;
     background-color: rgb(207, 22, 124);
+    align-self: stretch;
+   /* align-content: start; */
     /* flex-grow: 1; */
     /* flex-basis: 108px;  */
 }
 
 .calculadora div:nth-child(20){
     /* padding: 1px; */
-    height: 108px;
+    height: 5opx;
     width:  50px;
     background-color: rgb(73, 12, 241);
     margin: 3px;
-    /* align-self: self-start; */
+    /* align-content: stretch; */
+    /* align-self: flex-end; */
+    align-self: stretch;
     /* flex-grow: 1; */
 }
+
