--- a/style.css
+++ b/style.css
@@ -24,36 +24,43 @@
     /* margin: 5px; */
 }
 .marca{
+    background-color: antiquewhite;
     height: 50px;
     margin: 3px;
     padding: 1px;
-    /* width:  50px; */
-    background-color: rgb(218, 9, 9);
     grid-column: 1/5;
     grid-row: 1/2;
 }
 .visor{
+    background-color: antiquewhite;
     height: 50px;
     margin: 3px;
     padding: 1px;
     /* width:  50px; */
-    background-color: rgb(218, 9, 9);
+    /* background-color: rgb(218, 9, 9); */
     grid-column: 1/5;
     grid-row: 2/3;
 }
 
 .calculadora div:nth-child(18){
-    background-color: rgb(218, 9, 9);
+    background-color: antiquewhite;
     grid-row: 6/8;
     grid-column: 4/5;
+    margin: 3px;
+    padding: 1px;
+    width: 50px;
+    
 }
 
 
  
 .calculadora div:nth-child(19){
-    background-color: rgb(113, 13, 228);
+    background-color: antiquewhite;
     grid-column: 1/3;
     grid-row: 7/8;
+    margin: 3px;
+    padding: 1px;
+    height: 50px;
 }
 
 
