--- a/style.css
+++ b/style.css
@@ -1,29 +1,30 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: 0;
 }
 
-.corpo{
+.corpo {
     display: grid;
     border: 2px, black;
     background-color: #a52a2a;
     justify-content: center;
     height: 100vh;
     width: 100vw;
-    align-items: center;  
+    align-items: center;
 }
-.calculadora{
+
+.calculadora {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(7, 1fr); 
+    grid-template-rows: repeat(7, 1fr);
     background-color: rgb(0, 0, 0);
     width: 16vw;
     height: 60vh;
-    /* padding: 15px; */
-    /* margin: 5px; */
+
 }
-.marca{
+
+.marca {
     background-color: antiquewhite;
     height: 50px;
     margin: 3px;
@@ -31,30 +32,28 @@
     grid-column: 1/5;
     grid-row: 1/2;
 }
-.visor{
+
+.visor {
     background-color: antiquewhite;
     height: 50px;
     margin: 3px;
     padding: 1px;
-    /* width:  50px; */
-    /* background-color: rgb(218, 9, 9); */
     grid-column: 1/5;
     grid-row: 2/3;
 }
 
-.calculadora div:nth-child(18){
+.calculadora div:nth-child(18) {
     background-color: antiquewhite;
     grid-row: 6/8;
     grid-column: 4/5;
     margin: 3px;
     padding: 1px;
     width: 50px;
-    
 }
 
 
- 
-.calculadora div:nth-child(19){
+
+.calculadora div:nth-child(19) {
     background-color: antiquewhite;
     grid-column: 1/3;
     grid-row: 7/8;
@@ -66,37 +65,10 @@
 
 
 
-.botao{
+.div {
     height: 50px;
-    width:  50px;
+    width: 50px;
     background-color: antiquewhite;
     margin: 3px;
     padding: 1px;
-    /* grid-row: 1/8; */
-    /* grid-column: 1/5; */
 }
-
-
-/* .calculadora div:nth-child(18){
-    padding: 1px;
-    height: 50px;
-    width:  50px;
-    background-color: rgb(226, 135, 16);
-    margin: 3px;
-} */
-
-/* .calculadora div:nth-child(19){ 
-    padding: 1px;
-    margin: 3px;
-    height: 50px;
-    width:  50px;
-    background-color: rgb(207, 22, 124);
-} */
-
-/* .calculadora div:nth-child(20){
-    height: 5opx;
-    width:  50px;
-    background-color: rgb(73, 12, 241);
-    margin: 3px;
-} */
-
